update script layers

--- a/layers.html
+++ b/layers.html
@@ -1,7 +1,14 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    
+    <script>
+      window.LayersPortalOptions = {
+        appId: "lyceum",
+        insidePortalOnly: false,
+        manualLoadingControl: false
+      }
+    </script>
+    <script type="text/javascript" src="https://js.layers.digital/v1/LayersPortal.js"></script>
   </head>
   <body>
     <script type="text/javascript"
