atualização de layout e script

--- a/layers.html
+++ b/layers.html
@@ -11,7 +11,15 @@
     <script type="text/javascript" src="https://js.layers.digital/v1/LayersPortal.js"></script>
   </head>
   <body>
+    <script>
+	
+      setTimeout(function(){
+        jQuery(".chat-button").trigger("click");
+        console.log('teset');
+      }, 2000);
+    
+	</script>
     <script type="text/javascript"
-        src="https://cronchatcronapp.cronapp.io/get-chat?token=goakewAAEmfaarfasfTlTADj96LA"></script>
+        src="https://cronchatlayers.cronapp.io/get-chat?token=goakewAAEmfaarfasfTlTADj96LA"></script>
   </body>
 </html>
